--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-react-app",
+  "homepage": "./",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +16,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "sass": "^1.71.1"
   },
   "devDependencies": {
