--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node src/index.js",
-      "dev": "nodemon src/index.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.19.2"
+        "cors": "^2.8.5",
+        "express": "^4.19.2",
+        "mysql2": "^3.9.4"
     }
-  }
-  
+}
