--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "expres": "^0.0.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.4"
+  },
+  "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
