--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ejs": "^3.1.10",
     "expres": "^0.0.5",
     "express": "^4.19.2",
-    "mysql2": "^3.9.4"
+    "mysql2": "^3.9.4",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "react": "^18.2.0",
